[package]
name = "tracing-proc-macros-ink"
edition = "2024"
description = "Provides a working tracing integration for logging from within procedural macros."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ink-feather-org/tracing-proc-macros-ink-rs"
homepage = "https://github.com/ink-feather-org/tracing-proc-macros-ink-rs"
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["logging", "tracing", "metrics", "proc-macro", "nightly"]
version = "0.1.5"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
tracing-panic = { version = "0.1", optional = true }

[features]
default = ["default-setup", "tracing-panic"]
default-setup = [
  "tracing-subscriber/std",
  "tracing-subscriber/env-filter",
  "tracing-subscriber/time",
  "tracing-subscriber/local-time",
]
tracing-panic = ["dep:tracing-panic"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

# WORKSPACE

[workspace]
resolver = "2"
members = ["examples/*"]

[workspace.lints.clippy]
needless_lifetimes = "allow"
option_if_let_else = "allow"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
missing_panics_doc = "allow"
doc-markdown = "allow"

nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
nonstandard-style = "warn"
future-incompatible = "warn"
missing_docs = "warn"
unused = { priority = -1, level = "warn" }
rust_2018_idioms = { priority = -1, level = "warn" }
rust-2024-compatibility = "warn"
array-into-iter = "warn"
bare-trait-objects = "warn"
ellipsis-inclusive-range-patterns = "warn"
non-fmt-panics = "warn"
explicit-outlives-requirements = "warn"
unused-extern-crates = "warn"
unexpected_cfgs = { level = "warn" }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
